fix: spacing

--- a/src/components/Charts/KeyMetrics.module.css
+++ b/src/components/Charts/KeyMetrics.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .keyMetrics h1 {
